# async-django-book-code

./: .editorconfig  LICENSE  README.md
celery-weather-rabbitmq/: Dockerfile  README.md  compose.yml  pyproject.toml
celery-weather-rabbitmq/cweather/: celery.py  settings.py  urls.py
celery-weather-rabbitmq/djstorm/: models.py  views.py
celery-weather-rabbitmq/djstorm/migrations/: 0003_alter_weatherpoint_point.py
celery-weather-rabbitmq/scripts/: pipx_init.bsh
celery-weather-redis/: .gitignore  Dockerfile  Procfile  README.md  compose.yml  pyproject.toml
celery-weather-redis/cweather/: asgi.py  celery.py  settings.py  urls.py
celery-weather-redis/djstorm/: admin.py  tasks.py  views.py
celery-weather-redis/djstorm/migrations/: 0003_alter_weatherpoint_point.py
celery-weather-redis/scripts/: pipx_init.bsh
channel-weather/: .gitignore  Procfile  README.md  compose.yml  pyproject.toml
channel-weather/cweather/: asgi.py  beatconfig.py  routing.py  settings.py  urls.py
channel-weather/djstorm/: apps.py  consumers.py
channel-weather/djstorm/migrations/: 0002_alter_weatherpoint_point.py
channel-weather/djstorm/templates/: djstorm-locations.html
file-streamer/: .gitignore  Dockerfile  Procfile  README.md  compose.yml  manage.py  pyproject.toml  test_client.py
file-streamer/fstream/: asgi.py  settings.py  urls.py  views.py  wsgi.py
file-streamer/scripts/: group_init.bsh
gql-weather/: Procfile  README.md  compose.yml  pyproject.toml  test_client.py
gql-weather/cweather/: asgi.py  middleware.py  schema.py  settings.py  urls.py  ws_urls.py
gql-weather/djstorm/: models.py  schema.py
gql-weather/djstorm/migrations/: 0001_initial.py
gql-weather/djstorm/static/: ws-app.js
gql-weather/djstorm/templates/: djstorm-locations.html
gql-weather/scripts/: user_init.bsh
long-weather/: Procfile  README.md  compose.yml  manage.py  pyproject.toml
long-weather/cweather/: celery.py  settings.py  urls.py
long-weather/djstorm/: views.py
long-weather/djstorm/static/: ws-app.js
long-weather/djstorm/static/wicons/: LICENSE.md
long-weather/djstorm/templates/: djstorm-locations.html
pusher-weather/: Procfile  README.md  compose.yml  pyproject.toml
pusher-weather/cweather/: celery.py  settings.py  urls.py
pusher-weather/djstorm/: models.py  tasks.py  views.py
pusher-weather/djstorm/templates/: djstorm-dashboard.html  djstorm-locations.html
sse-weather/: Procfile  README.md  compose.yml  pyproject.toml  test_client.py
sse-weather/cweather/: celery.py  settings.py  urls.py
sse-weather/djstorm/: views.py
sse-weather/djstorm/static/: ws-app.js
sse-weather/djstorm/templates/: djstorm-locations.html
websocket-weather/: Dockerfile  Procfile  README.md  compose.yml  pyproject.toml  test_client.py
websocket-weather/cweather/: asgi.py  settings.py  urls.py  ws_urls.py  wsgi.py
websocket-weather/djstorm/: handler.py  tasks.py  views.py  ws.py
websocket-weather/djstorm/migrations/: 0003_alter_weatherpoint_point.py
websocket-weather/djstorm/static/: weather-mapping.js  ws-app.js
(+2 files in other folders)
