[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django>=4.2.7",
    "celery>=5.3.4",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.25.1",
    "honcho>=1.1.0",
    "setuptools>=68.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSDv3"}

[tool.pdm.scripts]
_.env_file = ".env"
