[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django>=5.0",
    "honcho>=1.1.0",
    "setuptools>=69.0.2",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "uvicorn[standard]>=0.24.0.post1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD-3Clause"}

